# braga_bot

./: .gitignore  Dockerfile  README.md  app_course.py  app_main.py  braga.py  check.py  hermes.md  pyproject.toml  requirements.txt  setup_and_run.ps1  test.py  update.py
