[project]
name = "braga-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "cffi==2.0.0 ; implementation_name != 'pypy' and os_name == 'nt'",
    "charset-normalizer==3.4.3",
    "python-dotenv>=1.0.0",
    "h11==0.16.0",
    "idna==3.10",
    "outcome==1.3.0.post0",
    "pycparser==3.0 ; implementation_name != 'PyPy' and implementation_name != 'pypy' and os_name == 'nt'",
    "pysocks==1.7.1",
    "requests==2.32.5",
    "selenium==4.35.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]
